--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,14 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     networks:
-      - rengine_network
+      - webguard_network
 
   redis:
     restart: always
     image: "redis:alpine"
     hostname: redis
     networks:
-      - rengine_network
+      - webguard_network
 
   celery:
     build:
@@ -52,7 +52,7 @@ services:
       - db
       - redis
     networks:
-      - rengine_network
+      - webguard_network
 
   celery-beat:
     build: ./web
@@ -78,14 +78,14 @@ services:
       - nuclei_templates:/root/nuclei-templates
       - tool_config:/root/.config
     networks:
-      - rengine_network
+      - webguard_network
 
   web:
     build:
       context: ./web
     entrypoint: /usr/src/app/entrypoint.sh
     restart: always
-    image: docker.pkg.github.com/yogeshojha/rengine/rengine:latest
+    image: docker.pkg.github.com/yogeshojha/webguard/webguard:latest
     environment:
       - DEBUG=0
       - CELERY_BROKER=redis://redis:6379/0
@@ -113,9 +113,9 @@ services:
       - celery
       - celery-beat
     networks:
-      rengine_network:
+      webguard_network:
         aliases:
-          - rengine
+          - webguard
 
   proxy:
     restart: always
@@ -129,17 +129,17 @@ services:
       - redis
     secrets:
       - source: proxy.ca
-        target: /etc/nginx/certs/rengine_chain.pem
+        target: /etc/nginx/certs/webguard_chain.pem
       - source: proxy.cert
-        target: /etc/nginx/certs/rengine.pem
+        target: /etc/nginx/certs/webguard.pem
       - source: proxy.key
-        target: /etc/nginx/certs/rengine_rsa.key
+        target: /etc/nginx/certs/webguard_rsa.key
     volumes:
       - ./config/nginx/webguard.conf:/etc/nginx/conf.d/webguard.conf:ro
       - static_volume:/usr/src/app/staticfiles/
       - scan_results:/usr/src/scan_results
     networks:
-      - rengine_network
+      - webguard_network
   ollama:
     image: ollama/ollama
     container_name: ollama
@@ -148,10 +148,10 @@ services:
     ports:
       - "11434:11434"
     networks:
-      - rengine_network
+      - webguard_network
 
 networks:
-  rengine_network:
+  webguard_network:
 
 volumes:
   tool_config:
@@ -166,8 +166,8 @@ volumes:
 
 secrets:
   proxy.ca:
-    file: ./secrets/certs/rengine_chain.pem
+    file: ./secrets/certs/webguard_chain.pem
   proxy.key:
-    file: ./secrets/certs/rengine_rsa.key
+    file: ./secrets/certs/webguard_rsa.key
   proxy.cert:
-    file: ./secrets/certs/rengine.pem
+    file: ./secrets/certs/webguard.pem
