Comment out the image line in docker-compose.dev.yml for clarity

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -89,7 +89,7 @@ services:
       context: ./web
     entrypoint: /usr/src/app/entrypoint.sh
     restart: always
-    image: docker.pkg.github.com/yogeshojha/webguard/webguard:latest
+    #image: docker.pkg.github.com/yogeshojha/webguard/webguard:latest
     environment:
       - DEBUG=1
       - CELERY_BROKER=redis://redis:6379/0
